# workbench

./: .env.example  .gitignore  LICENSE  README.md
docs/: KATEX_CHEATSHEET.md
maths/: README.md  reading_list.md
maths/applied_stochastic_modelling/: 00_stochastic_modelling_roadmap.md  01_alegebra_foundations.md  02_discrete_probablity_foundations.md  04_applied_stochastic_modelling.md  99_stochastic_modelling_pattern_cheatsheet.md  biology_path.md  complex_systems_path.md  physics_path.md  project_ideas.md  stochastic_modelling_canonical_problems_patterns.md
maths/applied_stochastic_modelling/02_discrete_probability_foundations.md/: gamblers_ruin_prob_win.md  gamblers_ruin_stopping_fair.md  prob_hhh.md  prob_hth.md  prob_hth_b4_hhh.md  second_difference_heuristic.md
py/: Makefile  pyproject.toml
scripts/: new-app.sh  new-folly.sh  new-lab.sh  new-rube.sh  new-web-app.sh  new-web-package.sh  setup-repo.sh  setup-web.sh
