[project]
name = "workbench"
version = "0.1.0"
description = "Workbench Python workspace"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*/*"]
exclude = ["packages/*/runs"]

[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
