[project]
name = "workbench"
version = "0.1.0"
description = "Workbench Python workspace"
requires-python = ">=3.11"
dependencies = ["labs"]

[tool.uv.workspace]
members = ["packages/labs", "packages/*/*"]
exclude = ["packages/*/runs", "packages/labs/src", "packages/labs/tests"]

[tool.uv.sources]
labs = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
